added some more items to the ignore list.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@ build
 # other
 eclipse
 run
+saves/
+config/
+options.txt
+usercache.json
+usernamecache.json
+logs/
+crash-reports/
+
+# Minecraft
+minecraft
+
